infastructure/k8s/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-depl
  template:
    metadata:
      labels:
        app: auth-service-depl
    spec:
      containers:
        - name: auth-service-depl
          image: hoominth/auth-service:v0.0.1
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth-service-depl
  ports:
    - name: auth-service-depl
      protocol: TCP
      port: 3000
      targetPort: 3000
